@@ -1,5 +1,4 @@
 ---
-
 language: perl
 perl:
   - "5.20"
@@ -8,3 +7,26 @@ perl:
   - "5.14"
   - "5.12"
   - "5.10"
+
+before_install:
+
+  # Prevent "Please tell me who you are" errors for certain DZIL configs
+
+  - git config --global user.name "TravisCI"
+
+install:
+
+  # Deal with all of the DZIL dependancies, quickly and quietly
+
+  - cpanm --quiet --notest --skip-satisfied Dist::Zilla
+
+  - dzil authordeps | cpanm --quiet --notest --skip-satisfied
+
+
+  - export RELEASE_TESTING=1 AUTOMATED_TESTING=1 AUTHOR_TESTING=1 HARNESS_OPTIONS=j10:c HARNESS_TIMER=1
+
+  - dzil listdeps | cpanm --verbose --notest --skip-satisfied
+
+script:
+
+  - dzil smoke --release --author
