@@ -1,24 +1,0 @@
-.*~$
-.*\.(bak|old)$
-\.git/.*
-\.gitignore
-
-^Makefile$
-
-^blib/
-^pm_to_blib$
-
-HTTP-Status-Constants.*/
-HTTP-Status-Constants-.*\.tar\.gz
-HTTP-Status-Const.*/
-HTTP-Status-Const-.*\.tar\.gz
-
-^MYMETA\.*
-
-# QA tests not needed for distribution
-
-^xt/
-
-# Travis-CI
-
-\.travis\.yml$
