@@ -1,0 +1,23 @@
+name    = HTTP-Status-Const
+author  = Robert Rothenberg <rrwo@cpan.org>
+license = Artistic_2_0
+copyright_holder = Robert Rothenberg
+copyright_year   = 2014
+
+[VersionFromModule]
+[PkgVersion]
+
+[@Basic]
+
+[Prereqs]
+perl = 5.010
+Exporter = 0
+Const::Exporter = 0
+HTTP::Status = 0
+Package::Stash = 0
+version = 0.77
+
+[RecommendedPrereqs]
+
+[GitHub::Meta]
+repo = git://github.com/robrwo/HTTP-Status-Constants.git
